feat: start to enforce srp